--- a/src/REditor/MainWindow.ui
+++ b/src/REditor/MainWindow.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>752</width>
-    <height>388</height>
+    <height>580</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -44,6 +44,9 @@
        </widget>
       </item>
      </layout>
+    </item>
+    <item>
+     <widget class="QListWidget" name="listWidget"/>
     </item>
    </layout>
   </widget>
