--- a/src/REditor/MainWindow.ui
+++ b/src/REditor/MainWindow.ui
@@ -55,6 +55,9 @@
   </widget>
   <widget class="QStatusBar" name="statusBar"/>
   <widget class="QDockWidget" name="editorDock">
+   <property name="features">
+    <set>QDockWidget::DockWidgetFloatable|QDockWidget::DockWidgetMovable</set>
+   </property>
    <property name="windowTitle">
     <string>Editor</string>
    </property>
@@ -148,6 +151,9 @@
    </widget>
   </widget>
   <widget class="QDockWidget" name="envDock">
+   <property name="features">
+    <set>QDockWidget::DockWidgetFloatable|QDockWidget::DockWidgetMovable</set>
+   </property>
    <property name="windowTitle">
     <string>Envirement</string>
    </property>
