--- a/src/REditor/MainWindow.ui
+++ b/src/REditor/MainWindow.ui
@@ -104,7 +104,7 @@
       </widget>
      </item>
      <item>
-      <widget class="QLabel" name="lbPlot">
+      <widget class="AspectRatioPixmapLabel" name="lbPlot">
        <property name="sizePolicy">
         <sizepolicy hsizetype="Preferred" vsizetype="Expanding">
          <horstretch>0</horstretch>
@@ -268,6 +268,11 @@
    <class>Console</class>
    <extends>QPlainTextEdit</extends>
    <header location="global">console.h</header>
+  </customwidget>
+  <customwidget>
+   <class>AspectRatioPixmapLabel</class>
+   <extends>QLabel</extends>
+   <header location="global">AspectRatioPixmapLabel.h</header>
   </customwidget>
  </customwidgets>
  <resources/>
